           you may lock the widget in place. You don't have to lock any of the widgets. However, the
           titlebar will take up space. Same goes for indicators. Drag and drop them. Very cool.

           NOTE: When a new indicator is created, it is unlocked and stacked at the bottom. You then drag and drop it
           where you like. Dropping it on top of other indicators will create a tabbed group.

20110113:  Things are coming together. The plugins are generally completed. Just need to fine tune the
           command syntax and polish the dialogs. The scripts work very well. The only thing left is to
           complete the backtesting plugins.

           Added sample scripts for creating scans and alerts.

           Once the command syntax has been finalized, I will write the QtStalker handbook that will be a
           comprehensive guide to QtStalker.

20110213:  The conversion to a script based app is pretty much complete. Still tying up a few loose ends.
           I will focus on tweaking the API where needed, and fix bugs. Features are almost completed with
           the exception of back testing. However, back testing can be done by scripting if desired right now,
           just more tedious without any plugins to assist. Back testing functions will be added later once
           the main app and API has been finalized.

           Also working on updating the docs.

20110214:  Moved the remaining main toolbar elements to the status bar. Main toolbar now removed to make more
           room for future enhancements. The zoom buttons, bar length, date range and recent chart controls
           are converted to buttons with popup menus.

20110215:  More experimenting with gui elements. Moved the bottom toolbar and placed it above the plot slider.
           I am trying to put all the app controls together as close as possible to minimize mouse travel and
           maximize efficiency. Will keep refining it until I am happy with it.


