@@ -43,9 +43,10 @@ HIGH = &lt;DECIMAL&gt;<br>
 LOW = &lt;DECIMAL&gt;<br>
 CLOSE = &lt;DECIMAL&gt;<br>
 VOLUME = &lt;INTEGER&gt;<br>
-INTEREST = &lt;INTEGER&gt;<br>
-NAME = &lt;COMPANY NAME&gt; Optional usage<br>
-TYPE = &lt;SECURITY TYPE&gt; User defined. Optional usage<br>
+INTEREST = &lt;INTEGER&gt; *Optional usage.<br>
+NAME = &lt;COMPANY NAME&gt; *Optional usage<br>
+TYPE = &lt;SECURITY TYPE&gt; *Optional usage. User defined, defaults to
+'Stock'<br>
 SAVE = &lt;BOOLEAN&gt; Saves quotes. After all quotes have been set.<br>
       <br>
       </td>
