@@ -39,7 +39,7 @@ HEADERS += HelpButton.h
 HEADERS += InfoPanel.h
 HEADERS += NewIndicatorButton.h
 HEADERS += OHLC.h
-HEADERS += PixelSpaceButton.h
+#HEADERS += PixelSpaceButton.h
 HEADERS += PickerMachine.h
 HEADERS += Plot.h
 HEADERS += PlotCandle.h
@@ -93,7 +93,7 @@ SOURCES += HelpButton.cpp
 SOURCES += InfoPanel.cpp
 SOURCES += main.cpp
 SOURCES += NewIndicatorButton.cpp
-SOURCES += PixelSpaceButton.cpp
+#SOURCES += PixelSpaceButton.cpp
 SOURCES += PickerMachine.cpp
 SOURCES += Plot.cpp
 SOURCES += PlotCandle.cpp
